<resources>
    <string name="app_name">ExternalActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="part_no">Part No</string>
    <string name="product_category_name">Product Category Name</string>
    <string name="serial_no">Serial No</string>
    <string name="quantity">Quantity</string>
    <string name="status">Status</string>
    <string name="add_rack">Add Rack</string>
    <string name="delete">Delete</string>
    <string name="rack">Rack</string>
    <string name="name">Name</string>
    <string name="rack_id">Rack ID</string>
    <string name="product_minimum_quantity">Product minimum quantity</string>
    <string name="rack_name">Rack Name</string>
    <string name="_100">100</string>
    <string name="abc1234">ABC1234</string>
    <string name="rack_1">Rack 1</string>
    <string name="rackID">RackID</string>
    <string name="add">Add</string>
    <string name="rack_size">Rack Size</string>
    <string name="are_you_sure_to_delete">Are you sure to delete?</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="symbol">:</string>
    <string name="delete_successful">Delete successful !!!</string>
    <string name="close">Close</string>
    <string name="scan">Scan</string>
    <string name="contact">contact</string>
    <string name="title_activity_rack_scanner">RackScanner</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_forget_password">ForgetPasswordActivity</string>
    <string name="email">email</string>
    <string name="location">location</string>
    <string name="product_quantity">product quantity</string>
    <string name="product_name">product name</string>
</resources>