<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScanRack">

    <TextView
        android:id="@+id/tvResultScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView35"
        app:layout_constraintEnd_toEndOf="@+id/tvResultScan2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvResultScan2"
        app:layout_constraintTop_toTopOf="@+id/textView35" />

    <Button
        android:id="@+id/btnRackContact"
        android:layout_width="113dp"
        android:layout_height="51dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="364dp"
        android:text="@string/contact"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnEmail"
        android:layout_width="113dp"
        android:layout_height="51dp"
        android:layout_marginTop="12dp"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="@+id/btnRackContact"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btnRackContact"
        app:layout_constraintTop_toBottomOf="@+id/btnRackContact" />

    <Button
        android:id="@+id/btnLocation"
        android:layout_width="113dp"
        android:layout_height="51dp"
        android:layout_marginTop="12dp"
        android:text="@string/location"
        app:layout_constraintEnd_toEndOf="@+id/btnScan"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnScan"
        app:layout_constraintTop_toBottomOf="@+id/btnScan" />

    <Button
        android:id="@+id/btnScan"
        android:layout_width="113dp"
        android:layout_height="51dp"
        android:layout_marginEnd="80dp"
        android:text="@string/scan"
        app:layout_constraintBottom_toBottomOf="@+id/btnRackContact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.757"
        app:layout_constraintStart_toEndOf="@+id/btnRackContact"
        app:layout_constraintTop_toTopOf="@+id/btnRackContact"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvResultScan2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView37"
        app:layout_constraintStart_toEndOf="@+id/textView37"
        app:layout_constraintTop_toTopOf="@+id/textView37"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/rack_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView37"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView37"
        app:layout_constraintTop_toBottomOf="@+id/textView37" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:text="@string/rackID"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/rack_size"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView35"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView35"
        app:layout_constraintTop_toBottomOf="@+id/textView35" />

    <TextView
        android:id="@+id/tvResultScan3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView38"
        app:layout_constraintEnd_toEndOf="@+id/tvResultScan"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvResultScan"
        app:layout_constraintTop_toTopOf="@+id/textView38" />

    <TextView
        android:id="@+id/tvResultScan5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView42"
        app:layout_constraintStart_toEndOf="@+id/textView42"
        app:layout_constraintTop_toTopOf="@+id/textView42"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvResultScan4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView44"
        app:layout_constraintEnd_toEndOf="@+id/tvResultScan5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvResultScan5"
        app:layout_constraintTop_toTopOf="@+id/textView44" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/product_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView38"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView38"
        app:layout_constraintTop_toBottomOf="@+id/textView38" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/product_quantity"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView42"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView42"
        app:layout_constraintTop_toBottomOf="@+id/textView42" />

    <TextView
        android:id="@+id/textView45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:textColor="@color/zxing_viewfinder_laser"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView44" />

</androidx.constraintlayout.widget.ConstraintLayout>